# deepseek-v4-flash-2bit-gb10

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  install.sh  pyproject.toml  requirements-serve.lock.txt
docs/: ARCHITECTURE.md
scripts/: _common.py  bench.py  download_model.py  serve.py
vq2_vllm/: __init__.py
vq2_vllm/kernels/: ds4_indexer_torch.py  ds4_oproj_triton.py  ds4_sparse_torch.py  ds4_sparse_triton.py  ds4_vq2_cuda.py  moe_align.py  vq2_grouped.cu  vq2_kernel.py
